# disjoint_interval_set

./: 404.html  CLAUDE.md  CMakeLists.txt  README.md  index.html  mkdocs.yml
about/citation/: index.html
about/contributing/: index.html
about/license/: index.html
api/disjoint-interval-set/: index.html
api/interval/: index.html
api/multi-dimensional/: index.html
api/parser-formatter/: index.html
api/type-aliases/: index.html
cmake/: libdis-config.cmake.in
docs/: README.md  examples.md  getting-started.md  index.md  installation.md  technical-report.md
docs/about/: citation.md  contributing.md  license.md
docs/api/: disjoint-interval-set.md  interval.md  parser-formatter.md  type-aliases.md
docs/guide/: basic-operations.md  compile-time-intervals.md  functional-programming.md  set-operations.md  string-dsl.md
docs/reports/: ELEGANT_API.md  STL_ALIGNMENT_REPORT.md  TEST_COVERAGE_REPORT.md
docs/technical-report/: applications.md  design-implementation.md  introduction.md  mathematical-foundation.md  performance.md  related-work.md
examples/: elegant_api_demo.cpp  improved_api_demo.cpp  index.html
getting-started/: index.html
guide/basic-operations/: index.html
guide/compile-time-intervals/: index.html
guide/functional-programming/: index.html
guide/set-operations/: index.html
guide/string-dsl/: index.html
include/dis/: dis.hpp
include/dis/core/: disjoint_interval_set.hpp  interval.hpp
include/dis/io/: format.hpp  parser.hpp
include/disjoint_interval_set/: concepts.hpp  disjoint_interval_set.hpp  disjoint_interval_set_algorithms.hpp  disjoint_interval_set_parser.hpp  disjoint_interval_set_v2.hpp  interval.hpp  interval_nd.hpp  interval_traits.hpp  interval_v2.hpp  static_interval.hpp
installation/: index.html
reports/ELEGANT_API/: index.html
reports/STL_ALIGNMENT_REPORT/: index.html
reports/TEST_COVERAGE_REPORT/: index.html
search/: search_index.json
technical-report/: index.html
technical-report/applications/: index.html
technical-report/design-implementation/: index.html
technical-report/introduction/: index.html
technical-report/mathematical-foundation/: index.html
technical-report/performance/: index.html
technical-report/related-work/: index.html
tests/: test_algorithms.cpp  test_dis_comprehensive.cpp  test_disjoint_interval_set.cpp  test_elegant_api.cpp  test_integration.cpp  test_interval.cpp  test_interval_comprehensive.cpp  test_parser_formatter_comprehensive.cpp
